--- a/junitPractice/pom.xml
+++ b/junitPractice/pom.xml
@@ -33,6 +33,12 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+    <groupId>io.swagger.core.v3</groupId>
+    <artifactId>swagger-annotations</artifactId>
+    <version>2.2.22</version>
+</dependency>
+
+		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
