--- a/junitPractice/pom.xml
+++ b/junitPractice/pom.xml
@@ -33,6 +33,12 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-webmvc</artifactId>
+    <version>6.1.6</version>
+</dependency>
+
+		<dependency>
     <groupId>io.swagger.core.v3</groupId>
     <artifactId>swagger-annotations</artifactId>
     <version>2.2.22</version>
